Refactor: Replace `Collectors.toList()` with `toList()` and introduce constants for cleaner code structure